@@ -14,6 +14,7 @@ export(calculateDPCoA)
 export(calculateDistance)
 export(calculateJSD)
 export(calculateNMDS)
+export(calculateOverlap)
 export(calculateUniFrac)
 export(countDominantTaxa)
 export(estimateDivergence)
@@ -52,6 +53,7 @@ export(runDMN)
 export(runDPCoA)
 export(runJSD)
 export(runNMDS)
+export(runOverlap)
 export(runUniFrac)
 export(splitByRanks)
 export(subsampleCounts)
@@ -81,6 +83,7 @@ exportMethods(calculateDPCoA)
 exportMethods(calculateDistance)
 exportMethods(calculateJSD)
 exportMethods(calculateNMDS)
+exportMethods(calculateOverlap)
 exportMethods(calculateRDA)
 exportMethods(calculateUniFrac)
 exportMethods(checkTaxonomy)
@@ -115,6 +118,7 @@ exportMethods(performDMNgroupCV)
 exportMethods(relAbundanceCounts)
 exportMethods(relabundance)
 exportMethods(runCCA)
+exportMethods(runOverlap)
 exportMethods(runRDA)
 exportMethods(splitByRanks)
 exportMethods(subsampleCounts)
